add sequenced collection